--- a/_data/films/season-2.yaml
+++ b/_data/films/season-2.yaml
@@ -12,10 +12,11 @@
   url   : https://player.vimeo.com/video/188605094
   thumb : img/film_thumbs/season-2/ep2.jpg
 - ep    : 3
-  title : "Claus Oldenberg + Autism + Mac & Apple & Cheese"
+  title : "Super Artists + Super Grains + Super Ninjas"
   width : 500
   height: 281
-  thumb : img/film_thumbs/season-2/ep3.jpg
+  url   : https://player.vimeo.com/video/191672206
+  thumb : img/film_thumbs/season-2/Ep3.jpg 
 - ep    : 4
   title : "Mary Cassatt + Trauma + Nut"
   width : 500
