--- a/_data/films/season-2.yaml
+++ b/_data/films/season-2.yaml
@@ -32,6 +32,7 @@
   width : 500
   height: 281
   thumb : img/film_thumbs/season-2/ep5.jpg
+  url   : https://player.vimeo.com/video/201106490
 - ep    : 6
   title : "El Greco + Breathing + Beans"
   width : 500
